fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -26,7 +26,6 @@ html {
 .icon {
     position: absolute;
     left: 0;
-    transform: translateY(-50%);
 }
 
 li div {
